--- a/playlist.html
+++ b/playlist.html
@@ -23,10 +23,10 @@
         <div class="item-media"><img src="img/cover cd/4.jpg" width="80"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Pop list</div>
+            <div class="item-title">R&B list</div>
           </div>
           <div class="item-subtitle">6 canciones - 5 artistas</div>
-			<div class="item-subtitle">Por: Julio</div>
+			<div class="item-subtitle">Por: Anna</div>
          
         </div></a></li>
    
