--- a/playlist.html
+++ b/playlist.html
@@ -6,7 +6,7 @@
 					<i class="material-icons">arrow_back</i>
 				</a>
 			</div>
-			<div class="title">playlist</div>
+			<div class="title"><h2>R&B playlist</h2></div>
 		</div>
 	</nav>
 
@@ -19,16 +19,15 @@
 			<div class="list media-list">
   <ul>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="img/cover cd/4.jpg" width="80"/></div>
+        <div class="item-media"><img src="img/Artists/artists/her.jpg" width="150"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">R&B list</div>
+            <div class="item-title"><h2>H.E.R</h2></div>
           </div>
-          <div class="item-subtitle">6 canciones - 5 artistas</div>
-			<div class="item-subtitle">Por: Anna</div>
+          <div class="item-subtitle"><h5>Hard Place Single</h5></div>
+			
          
-        </div></a></li>
+        </div></li>
    
     
   </ul>
@@ -38,52 +37,48 @@
   <ul>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-1.jpg" width="44"/></div>
+        <div class="item-media"><img src="img/Artists/artists/nani.jpg" width="50"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Yellow Submarine</div>
-          </div>
-          <div class="item-subtitle">Beatles</div>
+            <div class="item-title">Feels</div>
+			   </div>
+          <div class="item-subtitle">Khelani</div>
         </div>
       </div>
     </li>
-    <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-2.jpg" width="44"/></div>
+	  <li>
+         <div class="item-content">
+        <div class="item-media"><img src="img/Artists/artists/drake.jpg" width="50"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Don't Stop Me Now</div>
+            <div class="item-title">One Dance</div>
           </div>
-          <div class="item-subtitle">Queen</div>
+          <div class="item-subtitle">Drake</div>
         </div>
-      </a>
-		 <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-2.jpg" width="44"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Por tu amor</div>
-          </div>
-          <div class="item-subtitle">Belinda</div>
-        </div>
-      </a>
-		 <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-2.jpg" width="44"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Para tu amor</div>
-          </div>
-          <div class="item-subtitle">Juanes</div>
-        </div>
-      </a>
+      </div>
     </li>
+  </ul>
+		
+		 <ul>
     <li>
       <div class="item-content">
-        <div class="item-media"><img src="https://cdn.framework7.io/placeholder/fashion-88x88-3.jpg" width="44"/></div>
+        <div class="item-media"><img src="img/Artists/artists/rihrih.jpg" width="50"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Billie Jean</div>
+            <div class="item-title">Rude Boy</div>
           </div>
-          <div class="item-subtitle">Michael Jackson</div>
+          <div class="item-subtitle">Rih Rih</div>
+        </div>
+      </div>
+    </li>
+	  <li>
+         <div class="item-content">
+        <div class="item-media"><img src="img/Artists/artists/tw.jpg" width="50"/></div>
+        <div class="item-inner">
+          <div class="item-title-row">
+            <div class="item-title">love it</div>
+          </div>
+          <div class="item-subtitle">The Weeknd</div>
         </div>
       </div>
     </li>
@@ -96,6 +91,6 @@
     </div>
 		
 	
-	</div>
+	
 
 </section>
